Prevent Safari from outlining <a>

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -43,6 +43,7 @@ $default-input-border-radius: 2px;
 .image-icon {
     &:focus {
         outline-width: 0;
+        outline-style: solid;
     }
 }
 
