--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -22,7 +22,7 @@
     }
     .entries {
         position: relative;
-        z-index: $zindex__elevated;
+        z-index: $zindex__base;
         display: block;
         min-height: 36px;
         outline: none;
