--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -455,6 +455,10 @@ label {
             padding: 0 0 0 36px;
             text-transform: none;
 
+            &.disabled {
+                @include opacity(0.4);
+            }
+
             .label-text {
                 @include break-word;
                 display: inline-block;
