--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -1269,6 +1269,11 @@ input.ordering-controls__input {
         width: 50px;
         height: 18px;
     }
+    .accessories-line-chart__no-data-chart {
+        width: 100%;
+        height: 50%;
+        border-bottom: 1px solid $color-accent-neutral-30;
+    }
     &:hover {
         cursor: pointer;
         background-color: $color-accent-neutral-70;
