Added TileButton word wrap mixin

--- a/packages/end-user/src/css/shared/_device-icon.scss
+++ b/packages/end-user/src/css/shared/_device-icon.scss
@@ -26,6 +26,10 @@
 }
 
 .tile-button {
+    &__content {
+        @include break-word;
+    }
+
     &:hover {
         .device-icon__icon {
             &--mobile {
