--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -7,6 +7,7 @@
     font-size: 14px;
     line-height: 1em;
     background-color: transparent;
+    display: inline-block;
     @include font-pn-regular;
     @include break-word;
 
