Added TileSelector SCSS in end-user

--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -65,6 +65,7 @@
 @import './shared/tables';
 @import './shared/device-table';
 @import './shared/device-icon';
+@import './shared/tile-selector';
 
 // spacing components are after so they take precedence\
 
