add new signpost icon

--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -118,6 +118,7 @@ $icon-search: "\73";
 $icon-server: "\20ac";
 $icon-settings: "\53";
 $icon-shield: "\e91b";
+$icon-signpost: "\e933";
 $icon-slider: "\7e";
 $icon-sort-asc: "\41";
 $icon-sort-desc: "\2200";
@@ -131,8 +132,8 @@ $icon-success-round: "\e92e";
 $icon-support: "\71";
 $icon-tag: "\e924";
 $icon-terminal: "\e928";
-$icon-timer: "\e932";
 $icon-thumb: "\54";
+$icon-timer: "\e932";
 $icon-twitter: "\e92a";
 $icon-undo: "\6e";
 $icon-unlink: "\e92d";
@@ -144,3 +145,5 @@ $icon-view-hidden: "\2f";
 $icon-walkthrough: "\4d";
 $icon-wand: "\57";
 $icon-welcome: "\77";
+
+
