--- a/packages/ui-library/src/css/inputs/_dropdown.scss
+++ b/packages/ui-library/src/css/inputs/_dropdown.scss
@@ -67,10 +67,11 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
 
     .select-list {
         @include option-list;
+        display: inline-block;
 
-        div {
-            display: inline-block;
-        }
+        // div {
+        //     display: inline-block;
+        // }
 
         // each item in dropdown
         .select-option,
@@ -127,6 +128,9 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
         }
         .none-option {
             //@include text-no-value;
+        }
+        label {
+            text-transform: none;
         }
     }
 }
