--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -32,7 +32,7 @@
             &:after {
                 content: '\21';
                 position: absolute;
-                top: 15px;
+                top: $spacing-md;
                 left: 0;
                 right: 0;
                 font-family: $icon-font;
@@ -161,8 +161,8 @@
 
     .details-close {
         position: absolute;
-        top: 18px;
-        right: 15px;
+        top: $spacing-md;
+        right: $spacing-md;
         color: transparent;
         z-index: 2;
         line-height: 1em;
