--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -3,10 +3,10 @@
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2?5dhexm') format('woff2'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?5dhexm') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?5dhexm') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?5dhexm##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2?y9lu4j') format('woff2'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?y9lu4j') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?y9lu4j') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?y9lu4j##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
 }
