--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -700,7 +700,7 @@ $color-grey-minor-1: $color-neutral-30;
         top: 0;
         content: '\59';
         font-family: $icon-font;
-        font-size: 5px;
+        font-size: 8px;
         color: $color-active-blue;
         text-decoration: underline; // necessary to remove underline in IE -jfal
 
@@ -738,15 +738,16 @@ $color-grey-minor-1: $color-neutral-30;
     position: relative;
     display: inline-block;
     font-size: 14px;
-    margin: 0 0% 25px 13px;
+    margin: 0 0 25px;
     white-space: nowrap;
+    padding-left: $spacing-md;
 
     &:before {
         content: 'Y';
         position: absolute;
         top: -1px;
-        left: -14px;
-        font-size: 6px;
+        left: -1px;
+        font-size: 10px;
         font-family: $icon-font;
 
         @include rotate(90deg);
