--- a/packages/ui-library/src/css/list/_column-selector.scss
+++ b/packages/ui-library/src/css/list/_column-selector.scss
@@ -171,6 +171,7 @@
         display: flex;
         margin-left: $spacing-xs;
         width: 25px;
+        font-size: 15px;
     }
 
     &__row-titles-panel {
