--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -322,6 +322,9 @@ table.grid td.grid__cell {
             white-space: nowrap;
             width: 100%;
         }
+        [data-id="icon"] {
+            padding-right: 25px
+        }
     }
 
     &__cell-hint {
