added in label colors and bolding

--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -63,6 +63,11 @@
             margin-top: -20px;
             margin-bottom: 10px;
         }
+        [data-id="formLabel"] {
+            .label-text{
+            font-weight: bold;
+            }
+        }
     }
     > .collapsible-section-content {
         text-transform: none;
