--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -323,7 +323,11 @@ table.grid td.grid__cell {
             width: 100%;
         }
         [data-id="icon"] {
-            padding-right: 25px
+            padding-right: 25px;
+            color: $color-accent-neutral-10;
+            &:hover {
+                color: $color-active-blue;
+            }
         }
     }
 
