--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -28,6 +28,9 @@
             border-radius: 3px;
             margin: 0;
         }
+        &.unfocused {
+            padding: 0;
+        }
     }
 
     &__selected-content {
